--- a/GenerateTags/App.config
+++ b/GenerateTags/App.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="WorkingPath" value="C:\Users\P7G8\source\repos\FoodAndStyle\GenerateTags\GenerateTags"/>
+    <add key="WorkingPath" value="C:\Users\P7G8\source\repos\FoodAndStyle\GenerateTags\GenerateTags\Data"/>
     <add key="ColumnsHot" value="4"/>
     <add key="ColumnsCold" value="5"/>
+    <add key="FirstMenuItemsThatAreHot" value="4"/>
+    <add key="FirstMenuItemsThatHaveSideOrder" value="5"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
